--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
